test/sema/invalid-break.delta.output
invalid-break.delta:10:9: error: 'break' is only allowed inside 'while', 'for', and 'switch' statements
        break;
        ^
